--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,18 @@ dev = [
     "ruff>=0.1.9",
 ]
 
+[project.scripts]
+# Main commands
+tmw-setup = "tell_me_why:setup"
+tmw-start = "tell_me_why.app:main"
+tmw-ingest = "tell_me_why.ingest:main"
+tmw-test = "tell_me_why.test_api:main"
+
+# Convenience aliases
+tell-me-why = "tell_me_why:quick_start"
+rag-setup = "tell_me_why:setup"
+rag-serve = "tell_me_why.app:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -40,6 +52,3 @@ target-version = ['py312']
 [tool.ruff]
 line-length = 100
 target-version = "py312"
-
-[tool.uv]
-editable = true
