Add cli commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "ollama>=0.1.6",
     "pyyaml>=6.0",
     "requests>=2.31.0",
+    "typer[all]>=0.9.0",
+    "rich>=13.0.0",
+    "hatchling>=1.28.0",
 ]
 
 [project.optional-dependencies]
@@ -30,16 +33,17 @@ dev = [
 ]
 
 [project.scripts]
-# Main commands
-tmw-setup = "tell_me_why:setup"
-tmw-start = "tell_me_why.app:main"
-tmw-ingest = "tell_me_why.ingest:main"
-tmw-test = "tell_me_why.test_api:main"
+# Main CLI entry point
+tmw = "tell_me_why.cli:app"
 
-# Convenience aliases
-tell-me-why = "tell_me_why:quick_start"
-rag-setup = "tell_me_why:setup"
-rag-serve = "tell_me_why.app:main"
+# Legacy/convenience aliases (all route to main CLI)
+tmw-setup = "tell_me_why.cli:setup_command"
+tmw-start = "tell_me_why.cli:start_command"
+tmw-ingest = "tell_me_why.cli:ingest_command"
+tmw-test = "tell_me_why.cli:test_command"
+tell-me-why = "tell_me_why.cli:app"
+rag-setup = "tell_me_why.cli:setup_command"
+rag-serve = "tell_me_why.cli:start_command"
 
 [build-system]
 requires = ["hatchling"]
